--- a/install_apache2.yml
+++ b/install_apache2.yml
@@ -4,7 +4,19 @@
   become: yes
   tasks:
 
+  - name: Update Repository Index
+    apt:
+      update_cache: yes
+    when: ansible_distribution == "Ubuntu"
+
   - name: Install apache2 server package
     ansible.builtin.apt:
       name:
-       - "apache2"
+        apache2
+      state: latest
+
+  - name: Install Apache php module
+    apt:
+      name: libapache2-mod-php
+    when: ansible_distribution == "Ubuntu"
+
